--- a/test.html
+++ b/test.html
@@ -11,17 +11,23 @@
 
 </body>
 <script>
-  class Point {
-    constructor(x, y) {
-      if(typeof x == 'string') {
-        this.y = x
-      }
+  class A {
+    constructor() {
+        this.x = 1;
     }
-  }
+}
 
-  var point = new Point('jth');
-  console.log(point)
-  
+class B extends A {
+    constructor() {
+        super();
+        this.x = 2;
+        super.x = 3;
+        console.log(super.x); // undefined
+        console.log(this.x); // 3
+    }
+}
+
+let b = new B();
 </script>
 
 </html>
