--- a/test.html
+++ b/test.html
@@ -11,23 +11,15 @@
 
 </body>
 <script>
-  class A {
-    constructor() {
-        this.x = 1;
-    }
-}
-
-class B extends A {
-    constructor() {
-        super();
-        this.x = 2;
-        super.x = 3;
-        console.log(super.x); // undefined
-        console.log(this.x); // 3
-    }
-}
-
-let b = new B();
+  (function add() {
+    console.log(1)
+  }());
+  (async function add2() {
+    console.log(2)
+  }());
+  (function add3() {
+    console.log(3)
+  }())
 </script>
 
 </html>
