--- a/test.html
+++ b/test.html
@@ -13,21 +13,25 @@
 <script>
   class A {
     constructor() {
-        this.x = 1;
+      this.x = 1;
     }
-}
+  }
 
-class B extends A {
+  class B extends A {
     constructor() {
-        super();
-        this.x = 2;
-        super.x = 3;
-        console.log(super.x); // undefined
-        console.log(this.x); // 3
+      super();
+      this.x = 2;
+      super.x = 3;
+      console.log(super.x); // undefined
+      console.log(this.x); // 3
     }
-}
+  }
 
-let b = new B();
+  let b = new B();
 </script>
+
+<style>
+ 
+</style>
 
 </html>
